--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-montserrat: "Montserrat", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -15,9 +16,9 @@
 }
 
 body {
+  font-family: var(--font-montserrat), sans-serif !important;
   color: var(--foreground);
   background: white;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @keyframes float {
@@ -62,7 +63,7 @@ body {
   animation: bounce 2s infinite;
 }
 
-/* Add this to your global CSS */
+/* Transitions & Hover Effects */
 .transform {
   transition: transform 0.3s ease-in-out;
 }
