--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --font-montserrat: "Montserrat", sans-serif;
+  --font-poppins: "Poppins", sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,7 +16,7 @@
 }
 
 body {
-  font-family: var(--font-montserrat), sans-serif !important;
+  font-family: var(--font-poppins), sans-serif !important;
   color: var(--foreground);
   background: white;
 }
